# mbx_moveit_config

./: .setup_assistant  CMakeLists.txt  README.md  package.xml
config/: gazebo_controllers.yaml  robot.srdf  ros_controllers.yaml
launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  robot_moveit_controller_manager.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/: move_arm.cpp
urdf/: mbx_arm_model.urdf.xacro  ur10.urdf.xacro  ur10_robot.urdf.xacro
